--- a/app/views/upmin/product_photos/destroy.js.erb
+++ b/app/views/upmin/product_photos/destroy.js.erb
@@ -1,1 +1,3 @@
 $("[data-role=uploader] [data-role=upload-items]").html("<%= escape_javascript render("upmin/product_photos/index") %>");
+
+$("[data-role=uploader] .panel-title .size").text(<%= @product.product_photos.count %>)
