--- a/app/assets/stylesheets/upmin/theme.scss
+++ b/app/assets/stylesheets/upmin/theme.scss
@@ -8,15 +8,27 @@ h1 {
 }
 
 
+.modal-dialog {
+  z-index: 2000;
+  margin-top: 200px;
+}
+
 .navbar-inverse {
   background: #506070;
   .navbar-brand {
     color: #d8e0e0;
     // text-shadow: 0 1px 0 rgba(0, 0, 0, 1);
   }
-  .navbar-nav > li > a {
-    color: #d8e0e0;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 1);
+  .navbar-nav > li {
+    &.active {
+      a, a:hover {
+        background: #384858;
+      }
+    }
+    & > a {
+      color: #d8e0e0;
+      text-shadow: 0 1px 0 rgba(0, 0, 0, 1);
+    }
   }
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3)
 }
@@ -45,6 +57,10 @@ h1 {
   text-shadow: 0 1px 0 #ffffff;
   opacity: 0.2;
   filter: alpha(opacity=20);
+}
+
+.btn:focus {
+  outline: none
 }
 
 
