--- a/app/views/layouts/upmin/application.html.slim
+++ b/app/views/layouts/upmin/application.html.slim
@@ -2,16 +2,17 @@ html
   head
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     title = "Администрирование - #{t 'app.name'}"
-    = stylesheet_link_tag "upmin/application", media: "all"
 
-    script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"
+    = stylesheet_link_tag "upmin/application", media: "all"
     = javascript_include_tag "upmin/application"
-    = csrf_meta_tags
 
     = stylesheet_link_tag "upmin/overrides", media: "all"
     = javascript_include_tag "upmin/overrides"
 
     link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+    link rel="stylesheet" href="//select2.github.io/dist/css/select2.min.css"
+
+    = csrf_meta_tags
 
     - if content_for?(:head)
       = yield(:head)
@@ -24,6 +25,8 @@ html
       = yield
 
     -# = render('layouts/footer')
+
+    script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"
 
     - if content_for?(:javascript)
       = yield(:javascript)
