--- a/app/assets/stylesheets/upmin/overrides.sass
+++ b/app/assets/stylesheets/upmin/overrides.sass
@@ -55,6 +55,9 @@ body
   form[data-remote]
     margin: 0
     position: relative
+    .select2-search-field input
+      height: inherit
+      padding: 3px 5px
     .busy
       color: #89a
       z-index: 99999
