--- a/app/assets/stylesheets/upmin/theme.scss
+++ b/app/assets/stylesheets/upmin/theme.scss
@@ -22,7 +22,7 @@ h1 {
   .navbar-nav > li {
     &.active {
       a, a:hover {
-        background: #384858;
+        background: #3d4d5d;
       }
     }
     & > a {
