--- a/app/views/_shared/_footer.slim
+++ b/app/views/_shared/_footer.slim
@@ -1,12 +1,12 @@
 footer
   .social_links
-    a href="" title="ВКонтакте"
+    a href=Setting.get('social.links.vk') title="ВКонтакте"
       img src=image_url("social_icon_vkontakte.png")
     span.spacer
-    a href="" title="Facebook"
+    a href=Setting.get('social.links.fb') title="Facebook"
       img src=image_url("social_icon_facebook.png")
     span.spacer
-    a href="" title="Instagram"
+    a href=Setting.get('social.links.inst') title="Instagram"
       img src=image_url("social_icon_instagram.png")
 
   .links
