--- a/app/views/_shared/_header.slim
+++ b/app/views/_shared/_header.slim
@@ -20,10 +20,10 @@ header
     = f.submit "", class: "submit"
 
   .contacts
-    a.phone href="tel:#{Setting.get(:contact_phone).try(:gsub, /\s|[()]/, '')}"
-      = Setting.get(:contact_phone)
-    a.email href="mailto:#{Setting.get(:contact_email)}"
-      = Setting.get(:contact_email)
+    a.phone href="tel:#{Setting.get('contacts.phone').try(:gsub, /\s|[()]/, '')}"
+      = Setting.get('contacts.phone')
+    a.email href="mailto:#{Setting.get('contacts.email')}"
+      = Setting.get('contacts.email')
 
   = render "catalog/menu"
 
