--- a/app/views/layouts/upmin/_navbar.slim
+++ b/app/views/layouts/upmin/_navbar.slim
@@ -10,7 +10,8 @@
     #navbar-main.navbar-collapse.collapse
       ul.nav.navbar-nav
         - Upmin::Model.all.each do |m|
-          li class=(params[:klass] == m.model_class.name ? 'active' : '')
+          li class=([params[:klass] == m.model_class.name ? 'active' : '', m.color].join(" "))
+            .decoration
             a href=m.search_path
               = m.humanized_name(:plural)
 
