--- a/app/views/upmin/partials/search_results/_results.slim
+++ b/app/views/upmin/partials/search_results/_results.slim
@@ -6,4 +6,4 @@
           dt
             = attribute.label_name
           dd
-            = attribute.value
+            = attribute.value.presence || raw("&nbsp;")
