--- a/app/views/upmin/partials/associations/_product_photos.slim
+++ b/app/views/upmin/partials/associations/_product_photos.slim
@@ -38,3 +38,8 @@
               = image_tag m.src.thumb, class: "img-thumbnail"
             = f.hidden_field :id, multiple: true, value: m.id
             = check_box_tag "product_photo[_remove][]", m.id
+
+p
+  span.fa.fa-info-circle
+  '
+  | Рекомендуемые размеры (для вертикальных изображений): 345 x 485
