--- a/app/views/upmin/partials/attributes/_src.slim
+++ b/app/views/upmin/partials/attributes/_src.slim
@@ -10,3 +10,7 @@
       - if attribute.editable? && f = form_builder
         = f.file_field(attribute.name, value: attribute.value, class: "form-control")
         br
+  p
+    span.fa.fa-info-circle
+    '
+    | Рекомендуемые размеры: 472 x 286
