--- a/app/views/catalog/products/show.html.slim
+++ b/app/views/catalog/products/show.html.slim
@@ -31,7 +31,10 @@
 
       .tail
         span.price = number_to_currency(x.price, precision: 0)
-        a.add_to_cart href="" = t ".add_to_cart"
+
+        = simple_form_for client_order.order_items.where(product_id: x.id).first_or_initialize do |f|
+          = f.hidden_field :product_id
+          = link_to t(".add_to_cart"), "", class: "add_to_cart", onclick: "$(this).closest('form').submit(); return false"
 
 .clear
 
