--- a/app/assets/stylesheets/app/cart.sass
+++ b/app/assets/stylesheets/app/cart.sass
@@ -50,6 +50,11 @@
           height: 40px
           padding: 0
           width: 100%
+      .input.field_with_errors
+        input
+          border-color: #c00000
+      span.error
+        display: none
     .links
       // +font-main-medium
       font-size: 18px
