--- a/app/views/orders/show.slim
+++ b/app/views/orders/show.slim
@@ -22,10 +22,11 @@
             | Итого: сумма заказа составляет #{number_to_currency(client_order.sum, precision: 0)}, включая НДС- 18%
   - else
     p
-      | Ваша корзина пуста
+      - if notice.present?
+        = notice
+      - else
+        | Ваша корзина пуста
 
-  /p
-    | «Спасибо, мы заказ приняли. В течение ближайшего дня специалист свяжется с Вами и уточнит детали заказа. Чтобы ускорить работу – вы можете связаться по телефону 8 495 7754846»
 
   .controls
     /- if client_order.order_items.any?
