--- a/app/views/orders/show.slim
+++ b/app/views/orders/show.slim
@@ -30,6 +30,10 @@
           = notice
         - else
           | Ваша корзина пуста
+          br
+
+    a.btn href=(session[:last_catalog_path])
+      | Вернуться к покупкам >>
 
 
     .controls
