Add order mailer

--- a/app/assets/stylesheets/app/cart.sass
+++ b/app/assets/stylesheets/app/cart.sass
@@ -9,6 +9,7 @@
     float: left
     height: 38px - $v_pad
     padding: $v_pad 15px 0
+    margin: 0 10px 0 0
     font-size: 14px
     text-align: center
     background: $bg_service
