--- a/app/views/orders/show.slim
+++ b/app/views/orders/show.slim
@@ -34,6 +34,8 @@
 
     a.btn href=(session[:last_catalog_path])
       | Вернуться к покупкам >>
+    a.btn href=""
+      | Сохранить спецификацию >>
 
 
     .controls
