--- a/app/views/order_mailer/new_order.slim
+++ b/app/views/order_mailer/new_order.slim
@@ -1,5 +1,5 @@
 p
   | Оформлен новый заказ:
   '
-  a href="/admin/m/Order/i/#{@order.id}"
+  a href="#{root_url}admin/m/Order/i/#{@order.id}"
     | перейти к обработке заказа >>
