--- a/app/assets/stylesheets/app/cart.sass
+++ b/app/assets/stylesheets/app/cart.sass
@@ -63,7 +63,7 @@
     .form
       background: $bg_service
       padding: 20px
-      ::placeholder
+      ::placeholder, .placeholder
         color: $text_dark
       input
         height: 24px
