--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -2,6 +2,7 @@
 // @import "retina"
 // @import "globals"
 
+$text_darkest: rgb(46, 45, 44)
 $text_dark: rgb(99, 91, 89)
 $text_medium: rgb(132, 166, 191)
 $text_light: white
