--- a/app/views/_shared/_header.slim
+++ b/app/views/_shared/_header.slim
@@ -25,8 +25,7 @@ header
   .contacts
     a.phone href="tel:#{Setting.get('contacts.phone').try(:gsub, /\s|[()]/, '')}"
       = Setting.get('contacts.phone')
-    a.email href="mailto:#{Setting.get('contacts.email')}"
-      = Setting.get('contacts.email')
+    = mail_to Setting.get('contacts.email'), Setting.get('contacts.email'), class: "email"
 
   = render "catalog/menu"
 
