--- a/app/views/orders/show.pdf.slim
+++ b/app/views/orders/show.pdf.slim
@@ -1,5 +1,12 @@
 .cart
   .row
+    p
+      | Спецификация подобранной мебели и предметов интерьера
+    p
+      | Дата:
+      '
+      = l Date.today
+  .row
     table
       thead
         tr
@@ -19,4 +26,13 @@
             td = number_to_currency(item.count.to_i * item.price, precision: 0, unit: "")
         tr
           td.sum colspan="5"
-            | Итого: сумма заказа составляет #{number_to_currency(client_order.sum, precision: 0)}, включая НДС- 18%
+            | Итого: сумма заказа составляет
+            '
+            b = number_to_currency(client_order.sum, precision: 0)
+            | ,
+            '
+            | включая НДС - 18%
+
+  .row.notes
+    p
+      | В цену включена: стоимость товара и его доставки до офиса или склада покупателя на территории городов Москвы или Санкт-Петербурга. Доставка в другие регионы осуществляется посредством транспортных компаний, оплата транспортных услуг осуществляется дополнительно.
