--- a/app/assets/stylesheets/app/_layout.sass
+++ b/app/assets/stylesheets/app/_layout.sass
@@ -72,7 +72,7 @@ header
         width: 158px
         &:focus
           outline: none
-      ::placeholder
+      ::placeholder, &.placeholder
         color: $text_dark
     .submit
       position: absolute
@@ -144,6 +144,8 @@ main
       font-size: 14px
       text-align: left
       margin: 18px 0 20px
+      a
+        color: $text_medium
     img
       margin-left: 15px
   section.extra
