--- a/app/assets/stylesheets/app/catalog.sass
+++ b/app/assets/stylesheets/app/catalog.sass
@@ -2,11 +2,12 @@
 
 .category_content
   margin: 37px 0 0
-  text-align: center
+  min-height: 350px
   ul
     list-style: none
     padding: 0
     margin: 0
+    text-align: center
     // height: 250px
     li
       float: left
