Other special fixes

--- a/app/assets/stylesheets/app/cart.sass
+++ b/app/assets/stylesheets/app/cart.sass
@@ -60,6 +60,8 @@
     font-size: 14px
     p
       margin: 0 0 5px
+    .error
+      color: #a00000
     .form
       background: $bg_service
       padding: 20px
