Add menu active items

--- a/app/assets/stylesheets/app/_layout.sass
+++ b/app/assets/stylesheets/app/_layout.sass
@@ -112,6 +112,8 @@ header
       a.item
         &:hover
           color: $text_medium
+        &.active
+          color: $text_darkest
       .submenu
         display: none
         position: absolute
@@ -200,3 +202,5 @@ footer
       background: image_url("links_spacer.png") center center no-repeat
       width: 40px
       height: 29px
+  .copy
+    float: right
