--- a/app/assets/stylesheets/app/catalog.sass
+++ b/app/assets/stylesheets/app/catalog.sass
@@ -70,6 +70,9 @@ section.extra
       a
         display: block
         padding: 6px 0 0
+        // cursor: pointer
+        &.active
+          color: $text_darkest
   .gallery
     width: 360px - $pad
     margin-left: $pad
