--- a/app/views/_shared/_footer.slim
+++ b/app/views/_shared/_footer.slim
@@ -15,3 +15,9 @@ footer
     span.spacer
     a href=app_document_path("privacy_policy")
       = simple_format "Соглашение о\n конфиденциальности", {}, wrapper_tag: "span"
+
+  .copy
+    | Сделано в
+    '
+    a href="http://ams-media.ru" target="_blank"
+      | ams-media.ru
