--- a/app/views/catalog/products/_side_menu_item.slim
+++ b/app/views/catalog/products/_side_menu_item.slim
@@ -1,2 +1,3 @@
 .wrapper
-  a.item href=side_menu_item.path = side_menu_item.name
+  a.item href=side_menu_item.path class=(@document.path == side_menu_item.path ? "active" : "")
+    = side_menu_item.name
