--- a/app/views/catalog/_menu_item.slim
+++ b/app/views/catalog/_menu_item.slim
@@ -1,5 +1,6 @@
 .wrapper
-  a.item href=menu_item.path = menu_item.name
+  a.item href=menu_item.path class=(@document.path =~ /#{menu_item.path}/ ? "active" : "")
+    = menu_item.name
   .submenu
     - menu_item.product_categories.each do |subitem|
       a.item href=subitem.path = subitem.name
