--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,6 +13,7 @@ html
 
     /! favicons (stay in public/)
     /= favicon_link_tag "/favicon.png", rel: "icon", type: "image/x-icon"
+    = favicon_link_tag "/favicon.ico", rel: "icon", type: "image/x-icon"
 
     = stylesheet_link_tag "application", media: "all"
     = javascript_include_tag "application"
