--- a/app/views/catalog/products/_side_menu_item.slim
+++ b/app/views/catalog/products/_side_menu_item.slim
@@ -1,3 +1,3 @@
 .wrapper
-  a.item href=side_menu_item.path class=(@document.path == side_menu_item.path ? "active" : "")
+  a.item href=side_menu_item.path class=(@document.respond_to?(:path) && @document.path == side_menu_item.path ? "active" : "")
     = side_menu_item.name
