move pdf styles

--- a/app/views/layouts/pdf.html.slim
+++ b/app/views/layouts/pdf.html.slim
@@ -5,7 +5,7 @@ html
     meta content="text/html; charset=#{Rails.application.config.encoding}" http-equiv="Content-Type"
     title = page_title
 
-    = wicked_pdf_stylesheet_link_tag "app/_pdf_layout"
+    = wicked_pdf_stylesheet_link_tag "pdf_application"
 
   body
     .header
