Fix more button

--- a/app/assets/stylesheets/app/catalog.sass
+++ b/app/assets/stylesheets/app/catalog.sass
@@ -36,11 +36,11 @@
         +font-main-medium
         font-weight: bold
   .more
-    display: inline-block
+    display: block
     font-size: 18px
     height: 38px
     padding: 0px 10px 0
-    margin: 0 0 9px
+    margin: 0 auto 9px
     background: $bg_service
     border: none
     &:focus
