--- a/app/views/catalog/product_categories/show.slim
+++ b/app/views/catalog/product_categories/show.slim
@@ -21,9 +21,10 @@
         class: "more"
 
 - else
-  .content
+  .category_content
     p
       | В данный момент товаров данной категории нет в наличии.
+      '
       | Посмотрите, пожалуйста,
       '
       a href=root_path
