--- a/app/views/orders/show.pdf.slim
+++ b/app/views/orders/show.pdf.slim
@@ -1,7 +1,7 @@
 .cart
   .row
     p
-      | Спецификация подобранной мебели и предметов интерьера
+      | Спецификация подобранной мебели и предметов интерьера
     p
       | Дата:
       '
