--- a/app/views/orders/show.slim
+++ b/app/views/orders/show.slim
@@ -48,7 +48,7 @@
     .controls
       - if client_order.errors.any?
         p.error
-          | Заполните, пожалуйста, все поля для оформления заказа
+          | Заполните, пожалуйста, необходимые поля для оформления заказа
       - else
         p
           | Заполните, пожалуйста, свои реквизиты для оформления заказа
