--- a/app/assets/stylesheets/app/_layout.sass
+++ b/app/assets/stylesheets/app/_layout.sass
@@ -113,6 +113,7 @@ header
         &:hover
           color: $text_medium
         &.active
+          +font-main-bold
           color: $text_darkest
       .submenu
         display: none
