--- a/app/assets/stylesheets/app/catalog.sass
+++ b/app/assets/stylesheets/app/catalog.sass
@@ -72,7 +72,9 @@ section.extra
         padding: 6px 0 0
         // cursor: pointer
         &.active
+          +font-main-bold
           color: $text_darkest
+
   .gallery
     width: 360px - $pad
     margin-left: $pad
